--- a/PnP Character Nexus/Views/WelcomeScreen.xaml
+++ b/PnP Character Nexus/Views/WelcomeScreen.xaml
@@ -19,15 +19,15 @@
 
     <Grid Name="main">
         <Grid.Background>
-            <ImageBrush Stretch="Fill" ImageSource="/Assets/StoreLogo.png" AlignmentY="Top" AlignmentX="Center" />
+            <ImageBrush Stretch="Fill" ImageSource="{Binding SelectedRuleset.ImageSource}" AlignmentY="Top" AlignmentX="Center" />
         </Grid.Background>
         
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
             <RowDefinition Height="1*" />
         </Grid.RowDefinitions>
-        <StackPanel Grid.Row="0">
-            <TextBlock Name="lblRuleset" Text="{Binding RulesetName}" FontSize="24" FontWeight="Bold" Foreground="White" />
+        <StackPanel Grid.Row="0" Background="Black">
+            <TextBlock Name="lblRuleset" Text="{Binding SelectedRuleset.Name}" HorizontalAlignment="Center" FontSize="24" FontWeight="Bold" Foreground="White" />
         </StackPanel>
         <Grid Grid.Row="1" Background="Transparent">
             <Grid.ColumnDefinitions>
@@ -41,11 +41,13 @@
                 <RowDefinition Height="1*"/>
             </Grid.RowDefinitions>
             <Button Name="btnRulesetLeft" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2" Padding="5"
-                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.15">
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.6"
+                    Command="{Binding UpdateRuleset}" CommandParameter="-1">
                 <Image Source="/Assets/Arrow_Button.png" Stretch="Fill"/>
             </Button>
             <Button Name="btnRulesetRight" Grid.Column="2" Grid.Row="0" Grid.RowSpan="2" Padding="5"
-                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.15">
+                    HorizontalAlignment="Stretch" VerticalAlignment="Stretch" Opacity="0.6"
+                    Command="{Binding UpdateRuleset}" CommandParameter="1">
                 <Image Source="/Assets/Arrow_Button.png" Stretch="Fill" RenderTransformOrigin="0.5,0.5">
                     <Image.RenderTransform>
                         <ScaleTransform ScaleX="-1"/>
